// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Typography ENCOURA theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1f28kiy-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;

exports[`Typography ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1f28kiy-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;

exports[`Typography ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1x66acz-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;

exports[`Typography ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-11dypxl-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;
